--- a/src/styles.scss
+++ b/src/styles.scss
@@ -173,3 +173,4 @@
       height: 12px;
       background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 46%, darkgrey 46%, darkgrey 56%,transparent 56%, transparent 100%), -webkit-linear-gradient(45deg, transparent 0%, transparent 46%, darkgrey 46%,  darkgrey 56%,transparent 56%, transparent 100%);
     } 
+    */
