--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,7 @@
       left: 0;
       box-sizing: content-box;
       -webkit-font-smoothing: antialiased;
-      /* font-smoothing: antialiased;
+      /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
 
       /* To fix the following issue:
@@ -66,7 +66,7 @@
     }
 
 
-    /*
+    
     #tat_input_container {
       display: flex;
       margin-bottom: 10px;
@@ -141,7 +141,7 @@
       top: 15px;
       right: 15px;
       -webkit-font-smoothing: antialiased;
-      font-smoothing: antialiased;
+      /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
       
     }
@@ -173,4 +173,4 @@
       height: 12px;
       background: -webkit-linear-gradient(-45deg, transparent 0%, transparent 46%, darkgrey 46%, darkgrey 56%,transparent 56%, transparent 100%), -webkit-linear-gradient(45deg, transparent 0%, transparent 46%, darkgrey 46%,  darkgrey 56%,transparent 56%, transparent 100%);
     } 
-    */
+    
