--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,7 +34,7 @@
       left: 0;
       box-sizing: content-box;
       -webkit-font-smoothing: antialiased;
-      
+      /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
 
       /* To fix the following issue:
@@ -141,7 +141,7 @@
       top: 15px;
       right: 15px;
       -webkit-font-smoothing: antialiased;
-      
+      /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
       
     }
