--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,7 +12,41 @@
       direction: rtl;
     }
 
-    
+    main {
+      color: #333;
+      max-width: 800px;
+      font-family: Arial, sans-serif;
+      font-size: 14px;
+      font-weight: 300;
+      letter-spacing: initial;
+
+      background: #fcf7d9;
+      text-align: left;
+      border-style: solid;
+      border-width: 1px;
+      border-color: #ccc;
+      box-shadow: rgba(0,0,0,0.2) 0px 2px 5px;
+      border-radius: 5px;
+      padding: 6px 8px 3px 8px;
+      position: fixed;
+      z-index: 2147483647;
+      top: -1500px;
+      left: 0;
+      box-sizing: content-box;
+      /* -webkit-font-smoothing: antialiased; */
+      /* font-smoothing: antialiased; */
+      text-rendering: optimizeLegibility;
+
+      /* To fix the following issue:
+      1. Have translate on hover enabled (opposed to translate on click).
+      2. Wisit a website that has a dropdown menu that opens on hover.
+      3. Open the menu.
+      4. Hover over a word within that menu.
+      5. Incidentally move the cursor over the TransOver popup.
+      The hover menu gets closed.
+      */
+      pointer-events: none;
+    }
 
     .pos_translation {
       font-size: 1em;
@@ -106,7 +140,7 @@
       z-index: 2147483647;
       top: 15px;
       right: 15px;
-      /* -webkit-font-smoothing: antialiased; */
+       -webkit-font-smoothing: antialiased; 
       /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
       
