--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,7 +33,7 @@
       top: -1500px;
       left: 0;
       box-sizing: content-box;
-      -webkit-font-smoothing: antialiased; 
+      /* -webkit-font-smoothing: antialiased; */
       /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
 
@@ -140,7 +140,7 @@
       z-index: 2147483647;
       top: 15px;
       right: 15px;
-      -webkit-font-smoothing: antialiased; 
+      /* -webkit-font-smoothing: antialiased; */
       /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
       
