--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-/* @import "bootstrap/scss/bootstrap"; */
+@import "bootstrap/scss/bootstrap";
 
 .pos_translation {
       padding-bottom: 3px;
@@ -33,7 +33,7 @@
       top: -1500px;
       left: 0;
       box-sizing: content-box;
-      
+
       /* -webkit-font-smoothing: antialiased; */
       /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
