--- a/src/styles.scss
+++ b/src/styles.scss
@@ -35,7 +35,7 @@
       left: 0;
       box-sizing: content-box;
 
-      /* -webkit-font-smoothing: antialiased; */
+      -webkit-font-smoothing: antialiased; 
       /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
 
@@ -142,7 +142,7 @@
       z-index: 2147483647;
       top: 15px;
       right: 15px;
-      /* -webkit-font-smoothing: antialiased; */
+      -webkit-font-smoothing: antialiased; 
       /* font-smoothing: antialiased; */
       text-rendering: optimizeLegibility;
       
